--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           pyinstaller --noconfirm --windowed --onefile --name CorrectionLRA app_gui.py
 
-      - name: Upload artifact
+      - name: Upload artifact (onefile)
         uses: actions/upload-artifact@v4
         with:
           name: CorrectionLRA-windows
-          path: dist/CorrectionLRA/CorrectionLRA.exe
+          path: dist/CorrectionLRA.exe
