--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,33 +1,30 @@
-name: Build Windows EXE (onefile)
+name: Build Windows EXE (CoeffsAB_LRA)
 
 on:
-  workflow_dispatch: {}   # Lancement manuel depuis l’onglet Actions
+  workflow_dispatch: {}
   push:
-    tags: ['v*']          # Optionnel: lance aussi à chaque tag v1.0, v1.1…
+    branches: ['coeffsablra-app']     # build à chaque push sur la branche
+    tags: ['v*']
+  pull_request:
+    branches: ['main']                # build sur la PR vers main
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-          architecture: 'x64'
-
+        with: { python-version: '3.11', architecture: 'x64' }
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
-
-      - name: Build EXE (onefile)
+      - name: Build onefile EXE
         run: |
-          pyinstaller --noconfirm --windowed --onefile --name CorrectionLRA app_gui.py
-
-      - name: Upload artifact (onefile)
+          pyinstaller --noconfirm --windowed --onefile --name CoeffsAB_LRA app_gui_coeffs.py
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: CorrectionLRA-windows
-          path: dist/CorrectionLRA.exe
+          name: CoeffsAB_LRA-windows
+          path: dist/CoeffsAB_LRA.exe
